<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="25dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.example.restaurant.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/fa_star"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/text"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <com.example.restaurant.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:rotation="-45"
                    android:text="@string/fa_phone_volume"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/text1"
                    android:textSize="16sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/book_table"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:background="@drawable/btn_rounded"
                android:padding="10dp"
                android:text="@string/book"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_cart"
        android:layout_below="@+id/card_view">

        <ListView
            android:id="@+id/menu_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:divider="@null"
            android:dividerHeight="1dp"
            android:scrollbars="none"></ListView>

        <RelativeLayout
            android:id="@+id/menu_lay"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/yellow"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom|center">

            <com.example.restaurant.IconTextView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:layout_alignParentBottom="true"
                android:text="@string/fa_star"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:textColor="@color/blue"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/menu"
                android:layout_alignParentBottom="true"
                android:text="@string/menu"
                android:textSize="14sp" />

        </RelativeLayout>
    </FrameLayout>

    <Button
        android:id="@+id/view_cart"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/blue"
        android:text="@string/cart"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>