<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/review"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/tt"
        android:layout_marginTop="53dp"
        android:divider="@null"
        android:dividerHeight="1dp"
        android:scrollbars="none"></ListView>

    <TextView
        android:id="@+id/tt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cart_list"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/delivery"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <RadioGroup
        android:id="@+id/aa_reg_rg_father_spouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tt1"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:layoutDirection="rtl"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/aa_reg__rb_spouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:drawableLeft="@mipmap/deliverytruck"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="Take - Away"
            android:textColor="@color/black"
            android:theme="@style/checkBoxStyle" />

        <RadioButton
            android:id="@+id/aa_reg_rb_father"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:checked="true"
            android:drawableLeft="@mipmap/meeting"
            android:drawablePadding="5dp"
            android:text="Dine-In"
            android:textColor="@color/black"
            android:theme="@style/checkBoxStyle" />

    </RadioGroup>

    <Button
        android:id="@+id/view_cart"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/blue"
        android:text="@string/p_order"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>