<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="10dp"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_st"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/starter"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_st1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="end"
                    android:text="13"
                    android:textColor="@color/yellow" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_mc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/main_co"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_mc1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="end"
                    android:text="6"
                    android:textColor="@color/yellow" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_de"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/dessert"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_de1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="end"
                    android:text="8"
                    android:textColor="@color/yellow" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_dri"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="@string/drinks"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_dri1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="end"
                    android:text="11"
                    android:textColor="@color/yellow" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>